# amr_rl

./: 2026-04-18-204951-this-session-is-being-continued-from-a-previous-c.txt  Makefile  README.md  __init__.py  config.yaml  pyproject.toml
.claude/: settings.local.json
baselines/: baselines.py
data/: card_genes.txt  patric_amr.tsv
evaluation/metrics/: eval_metrics.py
evaluation/plots/: paper_figures.py
notebooks/: colab_train.ipynb  exploration.ipynb
resistance/data_loaders/: patric_loader.py
resistance/model/: resistance_model.py
resistance/pretraining/: pretrain_resistance.py
scripts/: config_utils.py  download_data.py  download_real_patric_data.py  evaluate.py  generate_patric_data.py  smoke_test.py  train.py
simulator/: __init__.py
simulator/envs/: amr_env.py
simulator/pkpd/: pharmacokinetics.py
simulator/reward/: reward_fn.py
tests/: test_data_pipeline.py  test_ec50_predictor.py  test_env.py  test_pkpd.py  test_resistance_and_baselines.py  test_reward_and_eval.py
training/adversarial/: co_trainer.py
training/agents/: fixed_resistance_agent.py
